# seq-mem

./: .gitignore  README.md  pyproject.toml
src/sequential_memory/: __init__.py  graph.py  server.py  tools.py
tasks/: 00-overview.md  01-setup.md  02-architecture.md  03-data-structures.md  04-mcp-tools.md  05-implementation.md  06-testing.md  07-usage.md
tests/: test_basic.py
